--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,73 @@
+:root {
+    --text: #0c0c1b;
+    --background: #f5f5fc;
+    --primary: #4448ce;
+    --secondary: #8b8bf1;
+    --accent: #3d3df8;
+    
+    --text-50: #ededf7;
+    --text-100: #dcdcef;
+    --text-200: #b9b9df;
+    --text-300: #9595d0;
+    --text-400: #7272c0;
+    --text-500: #4f4fb0;
+    --text-600: #3f3f8d;
+    --text-700: #2f2f6a;
+    --text-800: #202046;
+    --text-900: #101023;
+    --text-950: #080812;
+
+    --background-50: #ebebf9;
+    --background-100: #d8d8f3;
+    --background-200: #b0b0e8;
+    --background-300: #8989dc;
+    --background-400: #6262d0;
+    --background-500: #3b3bc4;
+    --background-600: #2f2f9d;
+    --background-700: #232376;
+    --background-800: #17174f;
+    --background-900: #0c0c27;
+    --background-950: #060614;
+
+    --primary-50: #ebebfa;
+    --primary-100: #d7d8f4;
+    --primary-200: #aeb0ea;
+    --primary-300: #8689df;
+    --primary-400: #5e62d4;
+    --primary-500: #363ac9;
+    --primary-600: #2b2fa1;
+    --primary-700: #202379;
+    --primary-800: #151751;
+    --primary-900: #0b0c28;
+    --primary-950: #050614;
+
+    --secondary-50: #e8e8fc;
+    --secondary-100: #d2d2f9;
+    --secondary-200: #a4a4f4;
+    --secondary-300: #7777ee;
+    --secondary-400: #4949e9;
+    --secondary-500: #1c1ce3;
+    --secondary-600: #1616b6;
+    --secondary-700: #111188;
+    --secondary-800: #0b0b5b;
+    --secondary-900: #06062d;
+    --secondary-950: #030317;
+
+    --accent-50: #e6e6fe;
+    --accent-100: #cecefd;
+    --accent-200: #9d9dfb;
+    --accent-300: #6b6bfa;
+    --accent-400: #3a3af8;
+    --accent-500: #0909f6;
+    --accent-600: #0707c5;
+    --accent-700: #050594;
+    --accent-800: #040462;
+    --accent-900: #020231;
+    --accent-950: #010119;
+
+
+}
+
 /* Reset some default browser styles */
 body, h1, p, form {
     margin: 0;
