--- a/looking.css
+++ b/looking.css
@@ -1,9 +1,11 @@
-.search{
-    margin-top: 60px;
-    width: 80%;
-    margin: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.sex{
+    height: 100px;
     background-color: gray;
+    margin: 60px;
+    display: float;
+    position: right;
+
+}
+.search{
+    margin: 50px;
 }
