--- a/looking.css
+++ b/looking.css
@@ -1,13 +1,3 @@
-.sex{
-  height: 100px;
-  background-color: white;
-  display: float;
-  position: right;
-  padding: 50px;
-  margin: 50px;
-
-
-}
 
 .search{
   margin: 50px;
@@ -20,16 +10,24 @@
   padding: 30px;
   
 }
+ .card {
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: column;
+ }
 
-.my-element {
-  transition: background-color 1.5s ease-in-out; 
-  height: 200px;
-  display: float;
-  position: right;
-  padding: 50px;
-  margin: 50px;
+.card-body {
+  flex: 1; /* Flex-grow to take available space */
 }
 
-.my-element:hover {
-  background-color: #f2f2f2; /* Light gray background on hover */
+/* Custom styles for mobile devices */
+@media (max-width: 767.98px) {
+  .input-group > * {
+    flex: 1 1 100%; /* Make each form control take full width */
+    margin-bottom: 10px; /* Add some space between vertically stacked fields */
+  }
+  .input-group {
+    flex-direction: column; /* Stack input group items vertically */
+  }
 }
+</style>
